Changelog
=========

1.1 (unreleased)
----------------

- Nothing changed yet.


1.0 (2011-05-05)
----------------

- Initial release