@@ -4,7 +4,8 @@ Changelog
 1.1 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Handle encoded subject lines better.
+  [maurits]
 
 
 1.0 (2011-05-05)
